--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,14 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.squareup.okio:okio:1.9.0'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+
+    compile 'com.alibaba:fastjson:1.1.55.android'
+    compile 'com.orhanobut:logger:1.15'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
+    compile 'top.zibin:Luban:1.0.9'
+
 
 }
 
