--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "app.netframe"
@@ -27,16 +27,17 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
 
+    compile 'com.orhanobut:logger:1.15'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'top.zibin:Luban:1.0.9'
+    compile 'com.google.code.gson:gson:2.8.0'
+    testCompile 'junit:junit:4.12'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.squareup.okio:okio:1.9.0'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
 
-    compile 'com.alibaba:fastjson:1.1.55.android'
-    compile 'com.orhanobut:logger:1.15'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
-    compile 'top.zibin:Luban:1.0.9'
 
 
 }
