--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShopMainActivity"
+        <activity android:name=".ui.ShopMainActivity"
                              android:exported="true"
             android:screenOrientation="portrait"
             />
