--- a/rxhttp/build.gradle
+++ b/rxhttp/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.library'
+    id 'kotlin-android'
 }
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.fengyongge'
 
 android {
     compileSdkVersion 29
