--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,11 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation project(":rxhttp")
+//    implementation project(":rxhttp")
+    implementation 'com.github.fengyongge:android-rxhttp:0.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle:2.0.1'
+    implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.0.1'
 
 }
 
